@@ -2,23 +2,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>uk.ac.leeds.ccg.andyt</groupId>
-    <artifactId>agdt-java-generic-geotools</artifactId>
+    <groupId>io.github.agdturner</groupId>
+    <artifactId>agdt-java-geotools</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>agdt-java-generic-geotools</name>
-    <url>https://github.com/agdturner/agdt-java-generic-geotools</url>
+    <name>agdt-java-geotools</name>
+    <url>https://github.com/agdturner/agdt-java-geotools</url>
     <description>A Java Library to works with GeoTools.</description>
     <scm>
-        <url>git@github.com:agdturner/agdt-java-generic-geotools.git</url>
-        <connection>scm:git:git@github.com:agdturner/agdt-java-generic-geotools.git</connection>
-        <developerConnection>scm:git:git@github.com:agdturner/agdt-java-generic-geotools</developerConnection>
+        <url>git@github.com:agdturner/agdt-java-geotools.git</url>
+        <connection>scm:git:git@github.com:agdturner/agdt-java-geotools.git</connection>
+        <developerConnection>scm:git:git@github.com:agdturner/agdt-java-geotools</developerConnection>
     </scm>
     <licenses>
         <license>
             <name>Apache License 2.0</name>
-            <url>https://github.com/agdturner/agdt-java-generic-geotools/LICENSE.txt</url>
+            <url>https://github.com/agdturner/agdt-java-geotools/LICENSE.txt</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
@@ -54,11 +54,11 @@
         <geotools.version>13.2</geotools.version>
         <geotools.version>13-SNAPSHOT</geotools.version>
         -->
-        <agdt-java-generic.version>1.0-SNAPSHOT</agdt-java-generic.version>
-        <agdt-java-generic-grids.version>1.0-SNAPSHOT</agdt-java-generic-grids.version>
-        <agdt-java-generic-vector.version>1.0-SNAPSHOT</agdt-java-generic-vector.version>
-        <maven.compiler.source>12</maven.compiler.source>
-        <maven.compiler.target>12</maven.compiler.target>
+        <agdt-java-generic.version>1.1.1</agdt-java-generic.version>
+        <agdt-java-grids.version>1.0-SNAPSHOT</agdt-java-grids.version>
+        <agdt-java-vector.version>1.0-SNAPSHOT</agdt-java-vector.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <!--
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -157,36 +157,23 @@
             <version>${geotools.version}</version>
         </dependency>
         <dependency>
-            <groupId>uk.ac.leeds.ccg.andyt</groupId>
+            <groupId>io.github.agdturner</groupId>
             <artifactId>agdt-java-generic</artifactId>
             <version>${agdt-java-generic.version}</version>
         </dependency>
         <dependency>
-            <groupId>uk.ac.leeds.ccg.andyt</groupId>
-            <artifactId>agdt-java-generic-grids</artifactId>
-            <version>${agdt-java-generic-grids.version}</version>
+            <groupId>io.github.agdturner</groupId>
+            <artifactId>agdt-java-grids</artifactId>
+            <version>${agdt-java-grids.version}</version>
         </dependency>
         <dependency>
-            <groupId>uk.ac.leeds.ccg.andyt</groupId>
-            <artifactId>agdt-java-generic-vector</artifactId>
-            <version>${agdt-java-generic-vector.version}</version>
+            <groupId>io.github.agdturner</groupId>
+            <artifactId>agdt-java-vector</artifactId>
+            <version>${agdt-java-vector.version}</version>
         </dependency>
     </dependencies>
     
     <repositories>
-        <!--
-        <repository>
-            <id>agdt-java-generic</id>
-            <name>GitHub agdturner agdt-java-generic Repository</name>
-            <url>https://github.com/agdturner/agdt-java-generic/tree/master/target/mvn-repo/uk/ac/leeds/ccg/andyt/agdt-java-generic</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        -->
         <repository>
             <id>osgeo</id>
             <name>Open Source Geospatial Foundation Repository</name>
@@ -202,10 +189,142 @@
         </repository>
     </repositories>
     
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-verbose</arg>
+                        <arg>-Xlint:all,-options,-path</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+                <configuration>
+                    <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
+                </configuration>
+                <!--
+                <version>2.22.2</version>
+                -->
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M4</version>
+                <!--
+                <version>2.22.2</version>
+                -->
+            </plugin>
+        </plugins>
+    </build>
+            
+    <profiles>
+        <profile> 
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.8</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>          
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.8.1</version>
+                        <configuration>
+                            <compilerArgs>
+                                <arg>-verbose</arg>
+                                <arg>-Xlint:all,-options,-path</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.0.0-M4</version>
+                        <configuration>
+                            <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
+                        </configuration>
+                        <!--
+                        <version>2.22.2</version>
+                        -->
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>3.0.0-M4</version>
+                        <!--
+                        <version>2.22.2</version>
+                        -->
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>3.2.0</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.1.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.5</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+    
     <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <!--
         <repository>
             <id>internal</id>
             <url>file://${project.build.directory}/mvn-repo</url>
         </repository>
+        -->
     </distributionManagement>
 </project>
